# sia

./: .gitignore  AGENT_OPERATING_MANUAL.md  API_GENESIS_Design_Arabic.md  API_SIA_Design_Arabic.md  AUDIT_REPORT_S13.6.md  CONTRIBUTION_LEDGER.md  GENESIS_Adversarial_Validation_Memo_AR.md  GENESIS_Agent_Identity_Theory_AR.md  GENESIS_Anomaly_Crisis_Paradigm_Theory_AR.md  GENESIS_Anomaly_Leverage_Implementation_Memo_AR.md  GENESIS_Broader_Domain_Cycle_Memo_AR.md  GENESIS_Build_Checklist_AR.md  GENESIS_Cognitive_Economy_Ledger_And_Tier_Router_Spec_AR.md  GENESIS_Cognitive_Economy_Theory_AR.md  GENESIS_Concept_Engine_Deep_Analysis_AR.md  GENESIS_Concept_Engine_TaskCase_Refinement_Memo_AR.md  GENESIS_Concept_Formation_Engine_Spec_AR.md  GENESIS_Concept_Formation_Theory_AR.md  GENESIS_Concept_Selectivity_Spec_AR.md  GENESIS_Concept_Selectivity_Update_Memo_AR.md  GENESIS_Contradiction_Analytics_Update_Memo_AR.md  GENESIS_Contradiction_Theory_AR.md  GENESIS_Core_Ontology_AR.md  GENESIS_Current_Evidence_Package_AR.md  GENESIS_Current_Reference_Index_AR.md  GENESIS_Current_Regime_Memo_AR.md  GENESIS_Current_Regime_Status_AR.md  GENESIS_Curriculum_Analytics_Update_Memo_AR.md  GENESIS_Data_Schema_Plan_AR.md  GENESIS_Decision_Memo_AR.md  GENESIS_DeepMind_AlphaEvolve_FunSearch_Theft_AR.md  GENESIS_DeepMind_LEAP_Agentic_Theft_AR.md  GENESIS_Deep_Continuation_AR.md  GENESIS_Deep_Foundations_AR.md  GENESIS_Eval_System_Analysis_AR.md  GENESIS_Evaluation_Perturbation_Curriculum_Spec_AR.md  GENESIS_Evaluation_Pressure_Cycle_Memo_AR.md  GENESIS_Evaluation_Redesign_Memo_AR.md  (+198 more)
sia/: util.py  (+4 more)
(+370 files in other folders)
