[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-sia"
version = "0.1.0"
description = "Virtual SIA - Cognitive agent prototype with concept formation and cognitive economy"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["virtual_sia*"]
